Fix left-nav visibility on mobile
Previously the left-nav element was display:none except for fullWidth
screens. Users with small screens couldnt navigate the docs.

This fix keeps it displayed, positioning in left of content when space
allows, and keeping it under the content otherwise.

--- a/scss/left-nav.scss
+++ b/scss/left-nav.scss
@@ -1,8 +1,6 @@
 @import "mixins";
 
 .left-nav {
-	display: none;
-	position: absolute;
 	width: $leftNavWidth;
 	left: 2em;
 	top: 0;
@@ -39,6 +37,6 @@
 
 @media (min-width: $fullWidth) {
 	.left-nav {
-		display: block;
+		position: absolute;
 	}
 }
